update `about me` section

--- a/_includes/about_me.html
+++ b/_includes/about_me.html
@@ -7,41 +7,47 @@
       </div>
     </div>
     <div class="row">
-	    <div class="col-sm-6">
-    		<p>
-            I have over 6 years of experience as a software engineer, and have worked
-            at both small startups and large organizations. While I'm a proficient full-stack
-            developer, my expertise is in building scalable backend services (API services, stream processing,
-            and async mechanisms).
+      <div class="col-sm-6">
+    	<p>
+          I have over 4 years of experience as a software engineer, and have worked for small startups.
+          While I have shown be a proficient full-stack developer, my expertise is in building scalable backend
+          services.
         </p>
         <p>
-           I love building things.
-           While hard engineering problems are often intrinsically fun to tackle,
-           I'm most attracted to solving real customer problems with a business justification.
-           I'm looking for a senior individual contributor role where I can take on on collaborative
-           team leadership responsibilites, and gain experience with
-           architecture and project management.
+          I love building things. While hard engineering problems are often intrinsically fun to tackle,
+          I'm most attracted to solving real customer problems with a business justification.
         </p>
+        <p>
+          I am looking for a Machine Learning or Data Scientist role where I can tackle real life problems,
+          and put into practise the theory I have seen along my academic formation.
+        </p>
+	<p>
+	  <a href="https://www.linkedin.com/in/hdominguez/">See my LinkedIn profile</a> for more career details.
+	</p>
       </div>
-	    <div class="col-sm-6">
-		    <h3 style="margin-top:0;">Highlights</h3>
-		    <ul>
-    			<li>
-            Migrated a monolithic Heroku Ruby on Rails API to multiple Scala
-            services hosted on AWS. Delivered ahead of schedule, projected to save $18k/quarter.
-    			</li>
+      <div class="col-sm-6">
+	<h3 style="margin-top:0;">Highlights</h3>
+	<ul>
+    	  <li>
+            Fluent in Python, ReactJS / Redux / Webpack, Linux
+    	  </li>
           <li>
-            Presented research and proof-of-concept to convince team to move from Hadoop MR to Spark; reduced nodes by 60% and ran 5-8x faster.
+            Rest API designer
           <li>
-            Automated test automation in ramp-up to large data center migration, saving hundreds of developer hours.
-    			<li>
-            Presented "Understanding the GIL to Prevent Race Conditions" at RubyConf 2016.
-    			</li>
-    			<li>
-            Awarded patent for novel approach to item normalization in 3rd party catalog data feeds.
-    			</li>
-		    </ul>
-	    </div>
+            Test driven and Self-taught developer
+    	  <li>
+            Experienced handling sensitive data such as payment methods and anonymous survey results
+    	  </li>
+    	  <li>
+            Experienced for the full lifecycle development, from initial requirement gathering
+            to design, coding, testing, documentation and implementation
+    	  </li>
+          <li>
+            Passioned for being challenged and engaging with projects that require me to work outside
+            my comfort and knowledge set
+          </li>
+	</ul>
+      </div>
     </div>
   </div>
 </section>
