--- a/_includes/interests.html
+++ b/_includes/interests.html
@@ -1,50 +1,61 @@
 <section class="tout" id="interests">
-    <div class="container">
-      <div class="row">
-            <div class="col-lg-12 text-center">
-                <h2>Interests</h2>
-                <hr />
-            </div>
-        </div>
-            <div class="row">
-                <div class="col-sm-6">
-		    <p>
-			    My personal interests include:
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <h2>Interests</h2>
+        <hr />
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-6">
+	<p>
+	  My personal interests include:
         </p>
-			<ul>
-			  <li>
-				 <b>Deep learning</b>. It's an exciting time for machine learning. I'm working through several online classes, and swap articles with collegues.
-			  </li>
-			  <li>
-				  <b>RC Planes and Boats</b>. I've been an enthusiastic hobbiest since I was a teenager - but only as an adult am I able to afford the higher-quality
-          devices. I like to modify existing kits to improve speed, and add instrumentation.
-			  </li>
-			  <li>
-				  <b>Mountaineering</b>. I live in the Pacific Northwest, home of some of the greatest mountains and trails in the country. I enjoy spending weekends
-          on scrambles and getting lost in the woods.
-      </li>
-			</ul>
-		</div>
-    <div class="col-sm-6">
-      <h3 style="margin-top:0">Recent Projects</h3>
-		  <ul>
-  			<li>
-          OpenGidget is an open-source fork of Raspbian Linux that makes it easier to auto-provision a headless Raspberry PI,
-          get it onto your WiFi network, and deploy simple Python and Ruby scripts that run at startup - all without needing to plug in a keyboard/monitor.
-    		</li>
-  			<li>
-          My Medium blog covers my ongoing attempts to instrument and automate everything in my house.
-  			</li>
-  		    </ul>
-  		    <h3>Other Things</h3>
-  		    <ul>
-  			<li>
-           Volunteer at Boys and Girls club (since 2008)
-  			</li>
-  			<li>
-  			  Active member of The Seattle Ruby on Rails Developers Meetup Group.
-  			</li>
-		   </ul>
+	<ul>
+	  <li>
+	    <b>Machine learning</b>: I am working through several online classes, swap articles with collegues
+            and gain experience with tools such as <a href="https://www.tensorflow.org/">Tensorflow</a> and <a href="http://scikit-learn.org/stable/">Scikit-Learn</a>
+	  </li>
+	  <li>
+	    <b>Data Mining</b>: It is a good time for Data Mining. I am working on <a href="https://www.kaggle.com/">Kaggle</a> problems to gain experience
+            in the field while expertise in tools such as <a href="https://rapidminer.com/">RapidMiner</a>,
+            <a href="https://hadoop.apache.org/">Hadoop</a>, <a href="http://kylin.apache.org/">Kylin</a> and
+            <a href="https://spark.apache.org/">Spark</a>
+	  </li>
+	  <li>
+	    <b>Swimming</b>: I enjoy spent time on pools, lakes and beaches swimming
+          </li>
+	</ul>
+      </div>
+      <div class="col-sm-6">
+        <h3 style="margin-top:0">Recent Projects</h3>
+	<ul>
+  	  <li>
+            Collaborated in the app redesign of the <i>Stan Winston School of Characters Arts</i> web
+            <a href="https://www.stanwinstonschool.com/">application</a>, and main back-end engineer in
+            charge of the technology stack revamp. It is used as a e-learning platform. <b>Tech Stack</b>:
+            Django, React / Redux / Webpack, Braintree, AWS, ElasticSearch
+    	  </li>
+  	  <li>
+            Full-stack engineer of the 90Day web and mobile <a href="https://app.the90dayyear.com/">applications</a>,
+            used as an accelerator for the <i>90 Day Year program</i>. <b>Tech Stack</b>: Django,
+            React / Redux / Webpack, AWS, Cordova
+  	  </li>
+          <li>
+            Creator of the <i>Flu Tracker</i> web <a href="https://github.com/Hector-hedb12/flu_tracker">application</a>,
+            used as a surveillance tool for flu. <b>Tech Stack</b>: Django, Scikit-Learn, PostgreSQL / PostGIS
+          </li>
+  	</ul>
+  	<h3>Other Things</h3>
+  	<ul>
+  	  <li>
+            MLH Hacker participant, hackathon attended: <a href="https://uottahack.com/">2018 uOttaHack</a>,
+            <a href="http://cuhacking.com/">2018 CUHacking</a>
+  	  </li>
+  	  <li>
+  	    Member of the <b>Ottawa Python</b> Meetup Group.
+  	  </li>
+	</ul>
       </div>
     </div>
   </div>
