--- a/_includes/about_me.html
+++ b/_includes/about_me.html
@@ -43,7 +43,7 @@
             to design, coding, testing, documentation and implementation
     	  </li>
           <li>
-            Passioned for being challenged and engaging with projects that require me to work outside
+            Passionate for being challenged and engaging with projects that require me to work outside
             my comfort and knowledge set
           </li>
 	</ul>
