--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -98,6 +98,9 @@
                     <div class="col-lg-12">
                         Copyright &copy; {{ site.name }} 20{{ site.time | date: '%y' }}
                     </div>
+                    <div class="col-lg-12">
+                      Design adapted from <a href="http://chuckgroom.com/">Chuck Groom</a>
+                    </div>
                 </div>
             </div>
         </div>
