use `target="_blank"`

--- a/_includes/about_me.html
+++ b/_includes/about_me.html
@@ -22,7 +22,7 @@
           and put into practise the theory I have seen along my academic formation.
         </p>
 	<p>
-	  <a href="https://www.linkedin.com/in/hdominguez/">See my LinkedIn profile</a> for more career details.
+	  <a target="_blank" href="https://www.linkedin.com/in/hdominguez/">See my LinkedIn profile</a> for more career details.
 	</p>
       </div>
       <div class="col-sm-6">
