--- a/_includes/interests.html
+++ b/_includes/interests.html
@@ -14,13 +14,13 @@
 	<ul>
 	  <li>
 	    <b>Machine learning</b>: I am working through several online classes, swap articles with collegues
-            and gain experience with tools such as <a href="https://www.tensorflow.org/">Tensorflow</a> and <a href="http://scikit-learn.org/stable/">Scikit-Learn</a>
+            and gain experience with tools such as <a target="_blank" href="https://www.tensorflow.org/">Tensorflow</a> and <a target="_blank" href="http://scikit-learn.org/stable/">Scikit-Learn</a>
 	  </li>
 	  <li>
-	    <b>Data Mining</b>: It is a good time for Data Mining. I am working on <a href="https://www.kaggle.com/">Kaggle</a> problems to gain experience
-            in the field while expertise in tools such as <a href="https://rapidminer.com/">RapidMiner</a>,
-            <a href="https://hadoop.apache.org/">Hadoop</a>, <a href="http://kylin.apache.org/">Kylin</a> and
-            <a href="https://spark.apache.org/">Spark</a>
+	    <b>Data Mining</b>: It is a good time for Data Mining. I am working on <a target="_blank" href="https://www.kaggle.com/">Kaggle</a> problems to gain experience
+            in the field while expertise in tools such as <a target="_blank" href="https://rapidminer.com/">RapidMiner</a>,
+            <a target="_blank" href="https://hadoop.apache.org/">Hadoop</a>, <a target="_blank" href="http://kylin.apache.org/">Kylin</a> and
+            <a target="_blank" href="https://spark.apache.org/">Spark</a>
 	  </li>
 	  <li>
 	    <b>Swimming</b>: I enjoy spent time on pools, lakes and beaches swimming
@@ -32,25 +32,25 @@
 	<ul>
   	  <li>
             Collaborated in the app redesign of the <i>Stan Winston School of Characters Arts</i> web
-            <a href="https://www.stanwinstonschool.com/">application</a>, and main back-end engineer in
+            <a target="_blank" href="https://www.stanwinstonschool.com/">application</a>, and main back-end engineer in
             charge of the technology stack revamp. It is used as a e-learning platform. <b>Tech Stack</b>:
             Django, React / Redux / Webpack, Braintree, AWS, ElasticSearch
     	  </li>
   	  <li>
-            Full-stack engineer of the 90Day web and mobile <a href="https://app.the90dayyear.com/">applications</a>,
+            Full-stack engineer of the 90Day web and mobile <a target="_blank" href="https://app.the90dayyear.com/">applications</a>,
             used as an accelerator for the <i>90 Day Year program</i>. <b>Tech Stack</b>: Django,
             React / Redux / Webpack, AWS, Cordova
   	  </li>
           <li>
-            Creator of the <i>Flu Tracker</i> web <a href="https://github.com/Hector-hedb12/flu_tracker">application</a>,
+            Creator of the <i>Flu Tracker</i> web <a target="_blank" href="https://github.com/Hector-hedb12/flu_tracker">application</a>,
             used as a surveillance tool for flu. <b>Tech Stack</b>: Django, Scikit-Learn, PostgreSQL / PostGIS
           </li>
   	</ul>
   	<h3>Other Things</h3>
   	<ul>
   	  <li>
-            MLH Hacker participant, hackathon attended: <a href="https://uottahack.com/">2018 uOttaHack</a>,
-            <a href="http://cuhacking.com/">2018 CUHacking</a>
+            MLH Hacker participant, hackathon attended: <a target="_blank" href="https://uottahack.com/">2018 uOttaHack</a>,
+            <a target="_blank" href="http://cuhacking.com/">2018 CUHacking</a>
   	  </li>
   	  <li>
   	    Member of the <b>Ottawa Python</b> Meetup Group.
