--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -99,7 +99,7 @@
                         Copyright &copy; {{ site.name }} 20{{ site.time | date: '%y' }}
                     </div>
                     <div class="col-lg-12">
-                      Design adapted from <a href="http://chuckgroom.com/">Chuck Groom</a>
+                      Design adapted from <a target="_blank" href="http://chuckgroom.com/">Chuck Groom</a>
                     </div>
                 </div>
             </div>
