--- a/_includes/interests.html
+++ b/_includes/interests.html
@@ -43,7 +43,7 @@
   	  </li>
           <li>
             Creator of the <i>Flu Tracker</i> web <a target="_blank" href="https://github.com/Hector-hedb12/flu_tracker">application</a>,
-            used as a surveillance tool for flu. <b>Tech Stack</b>: Django, Scikit-Learn, PostgreSQL / PostGIS
+            used as a surveillance tool. <b>Tech Stack</b>: Django, Scikit-Learn, PostgreSQL / PostGIS
           </li>
   	</ul>
   	<h3>Other Things</h3>
