remove more words

--- a/_includes/interests.html
+++ b/_includes/interests.html
@@ -49,7 +49,7 @@
   	<h3>Other Things</h3>
   	<ul>
   	  <li>
-            MLH Hacker participant, hackathon attended: <a target="_blank" href="https://uottahack.com/">2018 uOttaHack</a>,
+            MLH Hacker participant: <a target="_blank" href="https://uottahack.com/">2018 uOttaHack</a>,
             <a target="_blank" href="http://cuhacking.com/">2018 CUHacking</a>
   	  </li>
   	  <li>
