--- a/_includes/interests.html
+++ b/_includes/interests.html
@@ -23,7 +23,7 @@
             <a target="_blank" href="https://spark.apache.org/">Spark</a>
 	  </li>
 	  <li>
-	    <b>Swimming</b>: I enjoy spent time on pools, lakes and beaches swimming
+	    <b>Swimming</b>: I enjoy spend time on pools, lakes and beaches swimming
           </li>
 	</ul>
       </div>
