remove tech stack details.

--- a/_includes/interests.html
+++ b/_includes/interests.html
@@ -33,17 +33,15 @@
   	  <li>
             Collaborated in the app redesign of the <i>Stan Winston School of Characters Arts</i> web
             <a target="_blank" href="https://www.stanwinstonschool.com/">application</a>, and main back-end engineer in
-            charge of the technology stack revamp. It is used as a e-learning platform. <b>Tech Stack</b>:
-            Django, React / Redux / Webpack, Braintree, AWS, ElasticSearch
+            charge of the technology stack revamp. It is used as a e-learning platform
     	  </li>
   	  <li>
             Full-stack engineer of the 90Day web and mobile <a target="_blank" href="https://app.the90dayyear.com/">applications</a>,
-            used as an accelerator for the <i>90 Day Year program</i>. <b>Tech Stack</b>: Django,
-            React / Redux / Webpack, AWS, Cordova
+            used as an accelerator for the <i>90 Day Year program</i>
   	  </li>
           <li>
             Creator of the <i>Flu Tracker</i> web <a target="_blank" href="https://github.com/Hector-hedb12/flu_tracker">application</a>,
-            used as a surveillance tool. <b>Tech Stack</b>: Django, Scikit-Learn, PostgreSQL / PostGIS
+            used as a surveillance tool
           </li>
   	</ul>
   	<h3>Other Things</h3>
